# on-policy-quantization

./: .gitignore  CLAUDE.md  README.md  analysis.ipynb  config.py  debug_batch.py  debug_batch_results.json  debug_dataset.py  dequantize.py  eval.py  gptq_awq.py  pyproject.toml  train.py  train_baseline.py  train_onpolicy.py  trainer.py  training_log.md
configs/: offpolicy.toml  onpolicy.toml
docs/: abstract.md  plan.md  qat_vs_ptq_numerics.md
k8s/: eval.sh  gptq_awq.sh  lib.sh  sweep.sh  train.sh
notebooks/: verify_quant_equivalence.ipynb
sweeps/: beta_lambda_grid.yaml  lora_rank_sweep.yaml  lr_sweep_offpolicy.yaml  lr_sweep_onpolicy.yaml
