[project]
name = "on-policy-distillation"
version = "0.1.0"
description = "On polic"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.1",
    "lm-eval>=0.4.0",
    "peft>=0.18.0",
    "pydantic>=2.12.5",
    "pydantic-config",
    "scipy>=1.16.3",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "trl>=0.26.1",
    "wandb>=0.23.1",
    "torchao",
]

[[tool.uv.index]]
name = "pytorch-nightly"
url = "https://download.pytorch.org/whl/nightly/cu128"

[tool.uv.sources]
pydantic-config = { git = "https://github.com/samsja/pydantic_config" }
torchao = { index = "pytorch-nightly" }
